assets/styles/chat.less
.content .chat {
}

.content section.chat > * {
  width: calc(70% - 1em);
}

.content .chat aside {
  float: right;
  font-style: italic;
  width: 30%;
  padding-left: 1em;
  font-size: 0.8em;
}

.content .chat dt {
  margin-left: 0;
  width: 5em;
  text-align: right;
  font-style: normal;
}

.content .chat dl {
  display: flex;
  flex-wrap: wrap;
  margin-top: 0;
  margin-bottom: 0;
}

.content .chat dt {
  width: 5em;
}

.content .chat dd {
  padding-left: 0.5em;
  width: calc(100% - 6em);
  border-left: solid thin red;
}

.content .chat dd p {
  margin-bottom: 0;
}

.content .chat dd.action p {
  font-style: italic;
}

.content .chat dd.action p:before {
  content: '(';
}

.content .chat dd.action p:after {
  content: ')';
}

@media (@small) {

  .content section.chat > * {
    width: 100%;
  }

  .content .chat aside {
    display: none;
  }

}

